--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Restaurant Search APP</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
